--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Hello World!</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>USVL</h1>
 
-    <h2>sup</h2>
+    <h2>Ban Christoph</h2>
 </body>
 </html>
